--- a/Lesson 3/HW3/Project_3.ipynb
+++ b/Lesson 3/HW3/Project_3.ipynb
@@ -1431,7 +1431,7 @@
    "cell_type": "code",
    "execution_count": 252,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,9 +1625,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 257,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1666,14 +1666,14 @@
        "    <tr>\n",
        "      <th>2018-01-08 07:38:48.384800</th>\n",
        "      <td>0.000020</td>\n",
-       "      <td>00:00:12.098200</td>\n",
-       "      <td>TTE</td>\n",
+       "      <td>00:00:02.022200</td>\n",
+       "      <td>Else</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-08 08:10:55.105500</th>\n",
-       "      <td>0.000040</td>\n",
-       "      <td>00:00:13.741500</td>\n",
-       "      <td>TTE</td>\n",
+       "      <td>0.000020</td>\n",
+       "      <td>00:00:05.976500</td>\n",
+       "      <td>Else</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-08 08:19:10.191000</th>\n",
@@ -1689,9 +1689,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-08 08:34:40.344000</th>\n",
-       "      <td>0.000065</td>\n",
-       "      <td>00:00:10.701000</td>\n",
-       "      <td>TTE</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>00:00:00.534000</td>\n",
+       "      <td>Else</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1700,22 +1700,22 @@
       "text/plain": [
        "                            OMMSide PnL OMMSide Time to Execute  \\\n",
        "DateTime                                                          \n",
-       "2018-01-08 07:38:48.384800     0.000020         00:00:12.098200   \n",
-       "2018-01-08 08:10:55.105500     0.000040         00:00:13.741500   \n",
+       "2018-01-08 07:38:48.384800     0.000020         00:00:02.022200   \n",
+       "2018-01-08 08:10:55.105500     0.000020         00:00:05.976500   \n",
        "2018-01-08 08:19:10.191000    -0.000095         00:00:10.214000   \n",
        "2018-01-08 08:23:16.231600    -0.000010         00:00:13.521400   \n",
-       "2018-01-08 08:34:40.344000     0.000065         00:00:10.701000   \n",
+       "2018-01-08 08:34:40.344000     0.000005         00:00:00.534000   \n",
        "\n",
        "                           OMMSide Trigger  \n",
        "DateTime                                    \n",
-       "2018-01-08 07:38:48.384800             TTE  \n",
-       "2018-01-08 08:10:55.105500             TTE  \n",
+       "2018-01-08 07:38:48.384800            Else  \n",
+       "2018-01-08 08:10:55.105500            Else  \n",
        "2018-01-08 08:19:10.191000             TTE  \n",
        "2018-01-08 08:23:16.231600             TTE  \n",
-       "2018-01-08 08:34:40.344000             TTE  "
+       "2018-01-08 08:34:40.344000            Else  "
       ]
      },
-     "execution_count": 251,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,7 +1744,7 @@
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1906,7 +1906,7 @@
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
